2002-01-12 Hasbullah Bin Pit <sebol@ikhlas.com>

	* configure.in: added ms in ALL_LINGUAS

2002-01-08  Richard Hestilow  <hestilow@ximian.com>

	* configure.in: Check for ESD.

	* acconfig.h: Declare HAVE_ESD, HAVE_LIBAUDIOFILE.

2002-01-04  Laszlo Peter <laca@ireland.sun.com>

	* doc/reference/Makefile.am: pass CFLAGS and LDFLAGS to the gtk-doc
	scan program

2002-01-04  Duarte Loreto <happyguy_pt@hotmail.com>

        * configure.in: Added Portuguese (pt) to ALL_LINGUAS

2001-12-28  jacob berkman  <jacob@ximian.com>

	* glade/glade-gnome.c: don't include libgnomeuiP.h any more

	* glade/glade-gnome.c: sigh, forgot to commit fixes for
	de-privatization of GnomeDialog
	

2001-12-23  Takayuki KUSANO  <AE5T-KSN@asahi-net.or.jp>

	* configure.in: Added "ja" to ALL_LINGUAS.

2001-12-14  Anders Carlsson  <andersca@gnu.org>

	* configure.in: Up version, disable tests/
	until it works with srcdir!=builddir.

2001-12-13  Darin Adler  <darin@bentspoon.com>

	* acconfig.h:
	* configure.in:
	Add GNOME_DEBUG_CHECK.

2001-12-12  James Henstridge  <james@daa.com.au>

	* glade/glade-gnome.c (app_build_children): correctly handle
	internal children in GnomeApps.
	(gnome_add_dock_item): use gtk_widget_get_ancestor() instead of
	glade_xml_get_toplevel() now that app_build_children is working.

2001-12-10  jacob berkman  <jacob@ximian.com>

	* tests/Makefile.am: there is no
	test-libglade-gnome-noupgrade.glade

2001-12-10  Kristian Rietveld  <kris@gtk.org>

	* libgnomeui/gnome-dialog.c (gnome_dialog_constructv): don't append
	buttons when buttons == NULL

2001-12-10  jacob berkman  <jacob@ximian.com>

	* tests/test-libglade-gnome-noupgrade.c (main): test
	libglade-convert --noupgrade

	* glade/glade-gnome.c (gnome_add_dock_item): fix dock item
	placement
	
	* glade/glade-gnome.c: accept more values for boolean true

2001-12-09  Kristian Rietveld  <kris@gtk.org>

	* libgnomeui/gnome-dialog.c (gnome_dialog_construct): don't append
	buttons when ap == NULL
